--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -25,7 +25,9 @@ text-align: center;
 margin-top: -50px;
 }
 
-.edit_product { margin-top: 30px; }
+.edit_product {
+  margin-top: 30px;
+}
 
 .new_product {
   margin-top: 30px;
@@ -48,5 +50,3 @@ margin-top: -50px;
 	position: relative;
 	left: 45%;
 }
-
-.links {color: black;}
