--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -38,6 +38,7 @@
 
 		<%= render partial:'new_comment' %>
 
+		<div class="alert alert-info" style="display:none" role="alert">A new comment was posted!</div>
 		<%= render partial:'comments' %>
 
 		<div class="pages"><%= will_paginate @comments %></div>
