--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -3,7 +3,7 @@
 </div>
 
 
-<div class="row">
+<div class="row" data-product-id="<%= @product.id %>">
 
 	<div class="col-md-12">
 		<div class="imgc">
